# solana-stablecoin-standard-1

./: Anchor.toml  Cargo.toml  README.md  Trident.toml  docker-compose.yml  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SSS-1.md  SSS-2.md  SSS-3.md  devnet-deployment.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/hooks/: useApi.ts  useWebSocket.ts
frontend/src/pages/: Compliance.tsx  Dashboard.tsx  Events.tsx  Operations.tsx  Oracle.tsx  Settings.tsx
frontend/src/styles/: globals.css
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: sss-overview.json
programs/solana-stablecoin-standard/: Cargo.toml
programs/solana-stablecoin-standard/src/: errors.rs  events.rs  lib.rs  state.rs
programs/solana-stablecoin-standard/src/instructions/: admin.rs  burn.rs  compliance.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  seize.rs  sss3.rs  transfer.rs  whitelist.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: lib.rs
services/api/: .env.example  package.json  tsconfig.json
services/api/src/: index.ts  middleware.ts  solana.ts
services/compliance/: package.json
services/compliance/src/: .env.example  index.ts
services/events/: .env.example  package.json  tsconfig.json
services/events/src/: index.ts  listener.ts  webhooks.ts  websocket.ts
services/oracle/: index.ts
tests/: package.json  tsconfig.json
tests/src/: helpers.ts  sdk.test.ts  security.test.ts  sss1.test.ts  sss2.test.ts  sss3.test.ts  transfer-hook.test.ts
trident-tests/fuzz_tests/fuzz_0/: Cargo.toml
trident-tests/fuzz_tests/fuzz_1/: Cargo.toml
trident-tests/fuzz_tests/fuzz_1/src/: lib.rs
trident-tests/fuzz_tests/fuzz_2/: Cargo.toml
(+14 files in other folders)
