[package]
name = "solana-stablecoin-standard"
version = "0.1.0"
description = "Solana Stablecoin Standard (SSS) — modular on-chain stablecoin framework"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_stablecoin_standard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "token_2022", "associated_token"] }
