[package]
name = "fuzz_1"
version = "0.1.0"
edition = "2021"
description = "Fuzz test: SSS-2 compliance invariants (whitelist/freeze/seize)"

[dependencies]
honggfuzz = "0.5"
trident-fuzz = { version = "0.7", features = ["token-2022"] }
solana-stablecoin-standard = { path = "../../../programs/solana-stablecoin-standard", features = ["no-entrypoint"] }
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "token_2022"] }
arbitrary = { version = "1", features = ["derive"] }

[[bin]]
name = "fuzz_target"
path = "src/bin/fuzz_target.rs"

[workspace]
